@@ -466,9 +466,7 @@ _boundary_scalar(const char   *nature,
     choice = cs_gui_get_attribute_value(path_commun);
 
     if (choice != NULL) {
-      if (cs_gui_strcmp(choice, "dirichlet")            ||
-          cs_gui_strcmp(choice, "exchange_coefficient")) {
-
+      if (cs_gui_strcmp(choice, "dirichlet")) {
         cs_xpath_add_element(&path, "dirichlet");
         cs_xpath_add_function_text(&path);
         if (cs_gui_get_double(path, &result)) {
@@ -480,7 +478,6 @@ _boundary_scalar(const char   *nature,
           }
           boundaries->values[f_id][izone * dim + i].val1 = result;
         }
-
       } else if(cs_gui_strcmp(choice, "neumann")) {
         cs_xpath_add_element(&path, "neumann");
         cs_xpath_add_function_text(&path);
@@ -531,6 +528,11 @@ _boundary_scalar(const char   *nature,
                                            2);
         }
       } else if (cs_gui_strcmp(choice, "exchange_coefficient")) {
+	cs_xpath_add_element(&path, "dirichlet");
+        cs_xpath_add_function_text(&path);
+	if (cs_gui_get_double(path, &result)) {
+	  boundaries->values[f_id][izone * dim + i].val1 = result;
+	}
         cs_xpath_add_element(&path2, "exchange_coefficient");
         cs_xpath_add_function_text(&path2);
         if (cs_gui_get_double(path2, &result)) {
